--- a/configuration/templates/admin/group-hours-body.hbs
+++ b/configuration/templates/admin/group-hours-body.hbs
@@ -2,6 +2,7 @@
   {{#if @root.request.body.volunteers}}
     {{#json key='hours_input' type='array'}}
       {{#eachJoin (regexSplit @root.request.body.volunteers '\r?\n') ","}}
+        {{#if this}}
         {{#json}}
           {{{json key='task_id' value=@root.request.body.task_id}}},
           {{{json key='hours' value=@root.request.body.hours}}},
@@ -10,6 +11,7 @@
           {{{json key='claim_code' value=(hash (concat " " (random 0 1000000000000)) 'md5')}}},
           {{{json key='verified' value=true}}},
         {{/json}}
+        {{/if}}
       {{/eachJoin}}
     {{/json}}
   {{/if}}
