--- a/configuration/partials/account/details-form-fields.hbs
+++ b/configuration/partials/account/details-form-fields.hbs
@@ -4,7 +4,8 @@
       <label class="form-label" for="first_name">First name</label>
     </div>
     <div class="col-9">
-      <input class="form-input" id="first_name" name="first_name" type="text" value="{{@root.data.accountInfo.first_name}}" placeholder="" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.first_name}}>
+      <input class="form-input" id="first_name" name="first_name" type="text" value="{{@root.data.accountInfo.first_name}}" placeholder=""
+        data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.first_name}}>
     </div>
   </div>
   <div class="form-group">
@@ -12,7 +13,8 @@
       <label class="form-label" for="last_name">Last name</label>
     </div>
     <div class="col-9">
-      <input class="form-input" id="last_name" name="last_name" type="text" value="{{@root.data.accountInfo.last_name}}" placeholder="" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.last_name}}>
+      <input class="form-input" id="last_name" name="last_name" type="text" value="{{@root.data.accountInfo.last_name}}" placeholder=""
+        data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.last_name}}>
     </div>
   </div>
   <div class="form-group">
@@ -21,26 +23,28 @@
     </div>
     <div class="col-9">
       {{#if admin ~}}
-      <input class="form-input" id="date_of_birth" name="date_of_birth" type="date" value="{{@root.data.accountInfo.date_of_birth}}" {{#if @root.data.accountInfo.date_of_birth}}disabled{{else}}{{>form_validation_attributes @root.context.metaData.accountInfoValidation.date_of_birth}}{{/if}}>
+        <input class="form-input" id="date_of_birth" name="date_of_birth" type="date" value="{{@root.data.accountInfo.date_of_birth}}"
+          data-component="TasksTrigger" data-TasksTrigger="focus-next" {{#if @root.data.accountInfo.date_of_birth}}disabled{{else}}{{>form_validation_attributes @root.context.metaData.accountInfoValidation.date_of_birth}}{{/if}}>
       {{else}}
-      <input class="form-input" id="date_of_birth_checked" name="date_of_birth" type="date" value="{{@root.data.accountInfo.date_of_birth}}" {{#if @root.data.accountInfo.date_of_birth}}disabled{{else}}{{>form_validation_attributes @root.context.metaData.accountInfoValidation.date_of_birth_checked}}{{/if}}>
-      {{#if @root.data.accountInfo.date_of_birth ~}}
-      <input type="hidden" name="date_of_birth" value="{{@root.data.accountInfo.date_of_birth}}">
-      {{/if ~}}
+        <input class="form-input" id="date_of_birth_checked" name="date_of_birth" type="date" value="{{@root.data.accountInfo.date_of_birth}}"
+          data-component="TasksTrigger" data-TasksTrigger="focus-next" {{#if @root.data.accountInfo.date_of_birth}}disabled{{else}}{{>form_validation_attributes @root.context.metaData.accountInfoValidation.date_of_birth_checked}}{{/if}}>
+        {{#if @root.data.accountInfo.date_of_birth ~}}
+          <input type="hidden" name="date_of_birth" value="{{@root.data.accountInfo.date_of_birth}}">
+        {{/if ~}}
       {{/if ~}}
       {{#if @root.data.accountInfo.date_of_birth ~}}
       <div class="caption">
         If your date of birth is incorrect here please
         {{#if @root.data.accountInfo.local_authority ~}}
-        {{#with (getProperty @root.context.metaData.tsiList (slugify @root.data.accountInfo.local_authority)) ~}}
-        {{#each contacts ~}}
-        {{#if (regexMatch @root.data.accountInfo.postcode pattern "gi") ~}}
-        <a href="mailto:{{email}}">contact us</a>.
-        {{/if ~}}
-        {{/each ~}}
-        {{/with ~}}
+          {{#with (getProperty @root.context.metaData.tsiList (slugify @root.data.accountInfo.local_authority)) ~}}
+            {{#each contacts ~}}
+              {{#if (regexMatch @root.data.accountInfo.postcode pattern "gi") ~}}
+                <a href="mailto:{{email}}">contact us</a>.
+              {{/if ~}}
+            {{/each ~}}
+          {{/with ~}}
         {{else}}
-        <a href="mailto:info@saltireawards.org.uk">contact us</a>.
+          <a href="mailto:info@saltireawards.org.uk">contact us</a>.
         {{/if ~}}
       </div>
       {{/if ~}}
@@ -48,42 +52,46 @@
   </div>
 
   {{#unless admin ~}}
-  <div class="form-group" id="verification" style="display:none;">
-    <div class="col-3">
-      <label class="form-label" for="verification_email">Your parent or guardian's email address</label>
+    <div class="form-group" id="verification" style="display:none;">
+      <div class="col-3">
+        <label class="form-label" for="verification_email">Your parent or guardian's email address</label>
+      </div>
+      <div class="col-9">
+        <input class="form-input" id="verification_email" name="verification_email" type="text" value="{{@root.data.accountInfo.verification_email}}" placeholder=""
+          data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.verification_email}}>
+      </div>
     </div>
-    <div class="col-9">
-      <input class="form-input" id="verification_email" name="verification_email" type="text" value="{{@root.data.accountInfo.verification_email}}" placeholder="" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.verification_email}}>
+    <div class="form-group">
+      <div class="col-3">
+        <label class="form-label" for="school_college_name">School/college name</label>
+      </div>
+      <div class="col-9">
+        <input class="form-input" id="school_college_name" name="school_college_name" type="text" value="{{@root.data.accountInfo.school_college_name}}" placeholder=""
+          data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.school_college_name}}>
+      </div>
     </div>
-  </div>
-  <div class="form-group">
-    <div class="col-3">
-      <label class="form-label" for="school_college_name">School/college name</label>
-    </div>
-    <div class="col-9">
-      <input class="form-input" id="school_college_name" name="school_college_name" type="text" value="{{@root.data.accountInfo.school_college_name}}" placeholder="" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.school_college_name}}>
-    </div>
-  </div>
   {{else}}
-  <div class="form-group">
-    <div class="col-3">
-      <label class="form-label" for="title">Job title</label>
+    <div class="form-group">
+      <div class="col-3">
+        <label class="form-label" for="title">Job title</label>
+      </div>
+      <div class="col-9">
+        <input class="form-input" id="title" name="title" type="text" value="{{@root.data.accountInfo.title}}" placeholder=""
+          data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.title}}>
+      </div>
     </div>
-    <div class="col-9">
-      <input class="form-input" id="title" name="title" type="text" value="{{@root.data.accountInfo.title}}" placeholder="" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.title}}>
+    <div class="form-group">
+      <div class="col-3">
+        <label class="form-label" for="phone">Phone number</label>
+      </div>
+      <div class="col-9">
+        <input class="form-input" id="phone" name="phone" type="text" value="{{@root.data.accountInfo.phone}}" placeholder=""
+          data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.phone}}>
+      </div>
     </div>
-  </div>
-  <div class="form-group">
-    <div class="col-3">
-      <label class="form-label" for="phone">Phone number</label>
-    </div>
-    <div class="col-9">
-      <input class="form-input" id="phone" name="phone" type="text" value="{{@root.data.accountInfo.phone}}" placeholder="" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.phone}}>
-    </div>
-  </div>
-  <input type="hidden" name="email" value="{{@root.data.auth.email}}">
-  <input type="hidden" name="verification_email" value="anuttgens@gmail.com" />
-  <input type="hidden" name="admin" value="true" />
+    <input type="hidden" name="email" value="{{@root.data.auth.email}}">
+    <input type="hidden" name="verification_email" value="anuttgens@gmail.com" />
+    <input type="hidden" name="admin" value="true" />
   {{/unless ~}}
 
   <div class="form-group">
@@ -91,7 +99,8 @@
       <label class="form-label" for="postcode">{{#if admin}}Work postcode{{else}}Home postcode{{/if}}</label>
     </div>
     <div class="col-2">
-      <input class="form-input" id="postcode" name="postcode" type="text" value="{{@root.data.accountInfo.postcode}}" placeholder="" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.postcode}}>
+      <input class="form-input" id="postcode" name="postcode" type="text" value="{{@root.data.accountInfo.postcode}}" placeholder=""
+        data-component="TasksTrigger" data-TasksTrigger="focus-next" {{>form_validation_attributes @root.context.metaData.accountInfoValidation.postcode}}>
     </div>
   </div>
   <input type="hidden" name="local_authority" id="local_authority" value="{{@root.data.accountInfo.local_authority}}" />
