Adding 'select', and 'textarea' to focus-next task

--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -389,7 +389,7 @@
                     {
                       name: "selector",
                       type: "basic",
-                      config: { __template: "a:not([disabled]):visible, button:not([disabled]):visible, input:not([disabled]):visible, [tabindex]:visible:not([disabled]):not([tabindex='-1'])" }
+                      config: { __template: "a:not([disabled]):visible, button:not([disabled]):visible, input:not([disabled]):visible, select:not([disabled]):visible, textarea:not([disabled]):visible, [tabindex]:visible:not([disabled]):not([tabindex='-1'])" }
                     },
                     {
                       name: "nextElement",
