--- a/configuration/templates/pages/claim-hours.hbs
+++ b/configuration/templates/pages/claim-hours.hbs
@@ -9,15 +9,15 @@
     <div class="columns col-gapless">
       <div class="col-6">
         <div class="form-group">
-          <label for="organisation_name" class="form-label">
-            Enter claim code
+          <label for="hours_claim_code" class="form-label">
+            Enter your claim code
           </label>
           <input id="task-code" name="hours_claim_code" class="form-input" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.task-code}}>
         </div>
       </div>
       <div class="col-6">
         <button id="detail-submit" type="submit" class="submit-button btn btn-primary b-margin-full">
-          Submit details
+          Claim hours
         </button>
       </div>
     </div>
