--- a/configuration/templates/search-postcode-lookup.hbs
+++ b/configuration/templates/search-postcode-lookup.hbs
@@ -3,14 +3,14 @@
   {
     "display": {{{stringify _source.place}}},
     "place": {{{stringify _source.place}}},
-    "tsiArea": "{{~#with (getProperty @root.context.metaData.tsiList (slugify (replace (replace (replace (replace (default _source.district _source.county) " and " " & ") " Islands" "") "City of " "") " City" ""))) ~}}
+    "tsi_area": "{{~#with (getProperty @root.context.metaData.tsiList (slugify (replace (replace (replace (replace (default _source.district _source.county) " and " " & ") " Islands" "") "City of " "") " City" ""))) ~}}
     {{~#each contacts ~}}
     {{~#if (regexMatch ../../_source.place pattern "gi") ~}}
     {{~#if area~}}{{area}}{{else}}{{../local_authority}}{{~/if~}}
     {{~/if ~}}
     {{~/each ~}}
     {{~/with ~}}",
-    "tsiContact": "{{~#with (getProperty @root.context.metaData.tsiList (slugify (replace (replace (replace (replace (default _source.district _source.county) " and " " & ") " Islands" "") "City of " "") " City" ""))) ~}}
+    "tsi_contact_email": "{{~#with (getProperty @root.context.metaData.tsiList (slugify (replace (replace (replace (replace (default _source.district _source.county) " and " " & ") " Islands" "") "City of " "") " City" ""))) ~}}
     {{~#each contacts ~}}
     {{~#if (regexMatch ../../_source.place pattern "gi") ~}}
     {{email}}
@@ -18,10 +18,10 @@
     {{~/each ~}}
     {{~/with ~}}",
     {{#if _source.district ~}}
-    "district": {{{stringify (replace (replace (replace (replace _source.district " and " " & ") " Islands" "") "City of " "") " City" "")}}},
+    "local_authority": {{{stringify (replace (replace (replace (replace _source.district " and " " & ") " Islands" "") "City of " "") " City" "")}}},
     {{else}}
     {{#if _source.county ~}}
-    "district": {{{stringify (replace (replace (replace (replace _source.county " and " " & ") " Islands" "") "City of " "") " City" "")}}},
+    "local_authority": {{{stringify (replace (replace (replace (replace _source.county " and " " & ") " Islands" "") "City of " "") " City" "")}}},
     {{/if ~}}
     {{/if ~}}
     {{#if _source.country ~}}
