--- a/configuration/templates/account/sidebar.hbs
+++ b/configuration/templates/account/sidebar.hbs
@@ -8,6 +8,12 @@
     {{/compare ~}}
   </h4>
   <ul class="menu">
+    <li class="menu-item">
+      <a href="/" class="{{#if (regexMatch @root.request.url.pathname '/' 'gi')}} active{{/if}}{{#if @root.data.accountInfo.verification_needed}} disabled{{/if}}">
+        <span class="far fa-fw fa-home" aria-hidden="true"></span>
+        Home
+      </a>
+    </li>
     {{#each @root.context.metaData.menus.user-signed-in ~}}
     {{#compare label "!==" "Sign out" ~}}
     {{#if (contains user-types @root.data.accountInfo.user_type) ~}}
