--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -105,7 +105,7 @@
                 </a>
                 <ul class="menu">
                   <li class="menu-item">
-                    <a href="/" class="{{#if (regexMatch @root.request.url.pathname '/' 'gi')}} active{{/if}}{{#if @root.data.accountInfo.verification_needed}} disabled{{/if}}">
+                    <a href="/" class="{{#compare @root.request.url.pathname '/'}} active{{/compare}}{{#if @root.data.accountInfo.verification_needed}} disabled{{/if}}">
                       <span class="far fa-fw fa-home" aria-hidden="true"></span>
                       Home
                     </a>
