--- a/configuration/partials/log-empty.hbs
+++ b/configuration/partials/log-empty.hbs
@@ -1,6 +1,6 @@
 <div class="empty">
   <div class="empty-icon">
-    <i class="icon icon-people"></i>
+    <span class="fal fa-user-clock fa-3x"></span>
   </div>
   <p class="empty-title h5">You have not logged any volunteering hours yet</p>
   <p class="empty-subtitle">Add your first volunteering task, or claim hours from an existing certificate.</p>
