--- a/configuration/templates/pages/task.hbs
+++ b/configuration/templates/pages/task.hbs
@@ -25,7 +25,7 @@
           </label>
         </div>
         <div class="col-5">
-          <input id="organisation_name" name="organisation_name" class="form-input" placeholder="" value="{{@root.data.taskInfo.organisation_name}}" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.organisation_name}}>
+          <input id="organisation_name" name="organisation_name" class="form-input" placeholder="e.g. A Charity" value="{{@root.data.taskInfo.organisation_name}}" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.organisation_name}}>
         </div>
       </div>
       <div class="form-group">
@@ -35,17 +35,20 @@
           </label>
         </div>
         <div class="col-5">
-          <input required id="location" name="location" class="form-input" placeholder="" value="{{@root.data.taskInfo.location}}" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.location}}>
+          <input required id="location" name="location" class="form-input" placeholder="e.g. Edinburgh" value="{{@root.data.taskInfo.location}}" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.location}}>
         </div>
       </div>
       <div class="form-group">
         <div class="col-2">
-          <label for="organisation_charity_number" class="form-label">
-            Organisation Scottish Charity Number (optional, e.g. SC012345)
+          <label for="organisation_charity_number" class="form-label r-margin">
+            Scottish charity number (optional)
           </label>
         </div>
         <div class="col-2">
-          <input autocomplete="off" id="organisation_charity_number" placeholder="" name="organisation_charity_number" class="form-input" value="{{@root.data.taskInfo.organisation_charity_number}}" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.organisation_charity_number}}>
+          <div class="input-group">
+            {{!-- <span class="input-group-addon">SC</span> --}}
+            <input autocomplete="off" id="organisation_charity_number" placeholder="e.g. SC003558" name="organisation_charity_number" class="form-input" value="{{@root.data.taskInfo.organisation_charity_number}}" {{>form_validation_attributes @root.context.metaData.taskInfoValidation.organisation_charity_number}}>
+          </div>
         </div>
       </div>
       <div class="form-group">
@@ -66,35 +69,34 @@
       <div class="form-group">
         <div class="col-2">
           <label for="volunteer_manager_first_name" class="form-label">
-            First name
+            Volunteer manager
           </label>
         </div>
         <div class="col-5">
-          <input required id="volunteer_manager_first_name" name="volunteer_manager_first_name" placeholder=""
-            {{>form_validation_attributes @root.context.metaData.taskInfoValidation.volunteer_manager_first_name}} class="form-input"
-            {{#if admin ~}}
-            value="{{default @root.data.taskInfo.volunteer_manager_first_name @root.data.accountInfo.first_name}}"
-            {{else}}
-            value="{{@root.data.taskInfo.volunteer_manager_first_name}}"
-            {{/if ~}}
-          >
-        </div>
-      </div>
-      <div class="form-group">
-        <div class="col-2">
-          <label for="volunteer_manager_last_name" class="form-label">
-            Last name
-          </label>
-        </div>
-        <div class="col-5">
-          <input required id="volunteer_manager_last_name" name="volunteer_manager_last_name" placeholder=""
-            {{>form_validation_attributes @root.context.metaData.taskInfoValidation.volunteer_manager_last_name}} class="form-input"
-            {{#if admin ~}}
-            value="{{default @root.data.taskInfo.volunteer_manager_last_name @root.data.accountInfo.last_name}}"
-            {{else}}
-            value="{{@root.data.taskInfo.volunteer_manager_last_name}}"
-            {{/if ~}}
-          >
+          <div class="form-horizontal">
+            <div class="form-group">
+              <div class="col-6">
+                <input required id="volunteer_manager_first_name" name="volunteer_manager_first_name" placeholder="First name"
+                  {{>form_validation_attributes @root.context.metaData.taskInfoValidation.volunteer_manager_first_name}} class="form-input"
+                  {{#if admin ~}}
+                  value="{{default @root.data.taskInfo.volunteer_manager_first_name @root.data.accountInfo.first_name}}"
+                  {{else}}
+                  value="{{@root.data.taskInfo.volunteer_manager_first_name}}"
+                  {{/if ~}}
+                >
+              </div>
+              <div class="col-6">
+                <input required id="volunteer_manager_last_name" name="volunteer_manager_last_name" placeholder="Last name"
+                  {{>form_validation_attributes @root.context.metaData.taskInfoValidation.volunteer_manager_last_name}} class="form-input"
+                  {{#if admin ~}}
+                  value="{{default @root.data.taskInfo.volunteer_manager_last_name @root.data.accountInfo.last_name}}"
+                  {{else}}
+                  value="{{@root.data.taskInfo.volunteer_manager_last_name}}"
+                  {{/if ~}}
+                >
+              </div>
+            </div>
+          </div>
         </div>
       </div>
       <div class="form-group">
@@ -104,7 +106,7 @@
           </label>
         </div>
         <div class="col-5">
-          <input required id="volunteer_manager_title" name="volunteer_manager_title" placeholder=""
+          <input required id="volunteer_manager_title" name="volunteer_manager_title" placeholder="e.g. Volunteer manager"
             {{>form_validation_attributes @root.context.metaData.taskInfoValidation.volunteer_manager_title}} class="form-input"
             {{#if admin ~}}
             value="{{default @root.data.taskInfo.volunteer_manager_title @root.data.accountInfo.title}}"
@@ -121,7 +123,7 @@
           </label>
         </div>
         <div class="col-5">
-          <input id="volunteer_manager_email" name="volunteer_manager_email" placeholder=""
+          <input id="volunteer_manager_email" name="volunteer_manager_email" placeholder="e.g. name@charity.org"
             {{>form_validation_attributes @root.context.metaData.taskInfoValidation.volunteer_manager_email}} class="form-input"
             {{#if admin ~}}
             value="{{default @root.data.taskInfo.volunteer_manager_email @root.data.accountInfo.email}}"
@@ -137,7 +139,7 @@
           </label>
         </div>
         <div class="col-5">
-          <input id="volunteer_manager_phone" name="volunteer_manager_phone" placeholder=""
+          <input id="volunteer_manager_phone" name="volunteer_manager_phone" placeholder="e.g. 01310001234"
             {{>form_validation_attributes @root.context.metaData.taskInfoValidation.volunteer_manager_phone}} class="form-input"
             {{#if admin ~}}
             value="{{default @root.data.taskInfo.volunteer_manager_phone @root.data.accountInfo.phone}}"
@@ -149,7 +151,7 @@
       </div>
       <div class="form-group">
         <div class="col-2">
-          <label for="sdg" class="form-label">
+          <label for="sdg" class="form-label r-margin">
             Which UN Sustainable Development Goal does this task match?
           </label>
         </div>
