--- a/configuration/templates/account/sign-up.hbs
+++ b/configuration/templates/account/sign-up.hbs
@@ -69,7 +69,9 @@
           config: {
             which: { __template: "\{{#if errors.signUp}}error\{{/if}}" },
             branches: {
-              default: {},
+              default: {
+
+              },
               error: {
                 halt: true,
                 tasks: [
