--- a/configuration/templates/account/sign-up-details.hbs
+++ b/configuration/templates/account/sign-up-details.hbs
@@ -2,21 +2,22 @@
   <h1>Add your details</h1>
 
   <h3 class="b-margin-full">
-    {{#unless @root.request.params.query.redirect}}
+    {{#unless @root.request.params.query.redirect ~}}
       Thank you for signing up to the Saltire Awards! Please add your details below
     {{else}}
       In order to use this site you need to complete your user details, please complete these below
-    {{/unless}}
+    {{/unless ~}}
   </h3>
 
   <form id="user-details-form" action="/submit-user-details" method="POST">
-    {{>account_details_form_fields admin=data.adminCandidate}}
+    {{> account_details_form_fields admin=data.adminCandidate}}
+
     <input type="hidden" name="signup" value="true">
     {{!-- This will probably have a captcha in it, hence the separation, and weird submit format --}}
     <div class="columns col-gapless">
       <div class="col-3"></div>
       <div class="col-2">
-        <button id="detail-submit" class="btn btn-primary b-margin-full" id="register-interest-submit" type="submit">
+        <button id="detail-submit" class="btn btn-primary b-margin-full" type="submit">
           Submit details
         </button>
       </div>
