Added global tab config and used it on opp page

--- a/configuration/layouts/default.hbs
+++ b/configuration/layouts/default.hbs
@@ -415,5 +415,25 @@
       }
     }
   </script>
+
+  <script data-component-config="tab" type="javascript/blocked">
+    {
+      click: {
+        __doNotCompile: true,
+        preventDefault: true,
+        tasks: [
+          {
+            type: "elementManipulator",
+            config: {
+              "< | $": { removeClass: "active" },
+              "<": { addClass: "active" },
+              "<.tabs | .panel": { styles: { display: "none" } },
+              "{href}": { styles: { display: "block" } }
+            }
+          }
+        ]
+      }
+    }
+  </script>
 </body>
 </html>
