claim code improve regex and remove ajax

--- a/configuration/templates/account/sidebar.hbs
+++ b/configuration/templates/account/sidebar.hbs
@@ -1,5 +1,5 @@
 {{#if @root.data.auth ~}}
-<div class="b-margin">
+<div class="b-margin-full b-padding-full">
   <h4 class="h-padding t-margin">
     {{#compare @root.data.accountInfo.user_type "Group Admin" ~}}
     Group administrator
