refactoring sign in

--- a/configuration/templates/account/settings.hbs
+++ b/configuration/templates/account/settings.hbs
@@ -5,7 +5,7 @@
 
   <div class="columns col-gapless">
     <div class="col-9">
-      <form id="user-details-form" action="/submit-user-details" method="POST" data-ajax-form='{
+      <form id="user-details-form" action="/update-account-details" method="POST" data-ajax-form='{
         "successCallback": "completeAccountCB",
         "failureCallback": "completeAccountCB"
       }'>
