--- a/configuration/partials/emails/parental-approval-body.html
+++ b/configuration/partials/emails/parental-approval-body.html
@@ -52,7 +52,7 @@
         <![endif]-->
   <!--[if lte mso 11]>
         <style type="text/css">
-          .mj-outlook-group-fix { width:100% !important; }
+          .outlook-group-fix { width:100% !important; }
         </style>
         <![endif]-->
   <style type="text/css">
@@ -109,7 +109,7 @@
                class="" style="vertical-align:top;width:560px;"
             >
           <![endif]-->
-                        <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                        <div class="mj-column-per-100 outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
                           <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                             <tbody>
                               <tr>
@@ -166,7 +166,7 @@
                class="" style="vertical-align:top;width:580px;"
             >
           <![endif]-->
-                        <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                        <div class="mj-column-per-100 outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
                           <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                             <tbody>
                               <tr>
@@ -238,7 +238,7 @@
                class="" style="vertical-align:top;width:580px;"
             >
           <![endif]-->
-                        <div class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
+                        <div class="mj-column-per-100 outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;">
                           <table border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%">
                             <tbody>
                               <tr>
