--- a/configuration/templates/account/approval-required.hbs
+++ b/configuration/templates/account/approval-required.hbs
@@ -23,11 +23,11 @@
     {{/if ~}}
     {{/compare ~}}
   </p>
-  <button onclick="sendApprovalEmail(true)" class="btn btn-primary">Resend email</button>
+  <a href="approval-email-send" class="btn btn-primary">Resend email</a>
   {{#compare @root.data.accountInfo.user_type "===" "Volunteer" ~}}
   <button onclick="revealForm()" class="btn btn-primary">Change email address</button>
   {{/compare ~}}
-  <form id="user-details-form" style="display:none;" method="POST" action="submit-user-details">
+  <form id="user-details-form" style="display:none;" method="POST" action="submit-sign-up-details">
     Please enter the new email address below
     <input type="hidden" name="signup" value="true">
     {{#each (getKeys @root.data.accountInfo) ~}}
