--- a/configuration/templates/account/sign-up-admin.hbs
+++ b/configuration/templates/account/sign-up-admin.hbs
@@ -1,4 +1,4 @@
-<form id="sign-up-form" method="POST" class="authentication-form container">
+<form id="sign-up-form" method="POST" class="authentication-form container" data-component="TasksTrigger" data-TasksTrigger="sign-up">
   <h1 class="x-padding">
     Group administrator sign up
   </h1>
